# readable-engine

./: .gitignore  README.md  package-lock.json
core-sim/: Cargo.toml
core-sim/src/: flow.rs  hpa.rs  lib.rs  math.rs  mod.rs  physics.rs
core-sim/src/pathfinding/: astar.rs  flow.rs  hpa.rs  mod.rs  navmesh.rs
engine-ts/: index.html  package-lock.json  package.json  vite.config.ts
engine-ts/scripts/: gen-manifest.ts
engine-ts/src/: locales.ts  main.ts
engine-ts/src/core/: CameraManager.ts  ErrorReporter.ts  GameLoop.ts  HeadlessRunner.ts  Hydrator.ts  InputManager.ts  SimBridge.ts  SpatialGrid.ts  StateManager.ts
engine-ts/src/data/: DataManager.ts  schema.ts
engine-ts/src/ecs/: Registry.ts  components.ts
engine-ts/src/network/: GeckosAdapter.ts  HeadlessAdapter.ts  LocalAdapter.ts  LockstepManager.ts  types.ts
engine-ts/src/renderer/: AssetManager.ts  GameRenderer.ts  MapSelectionScreen.ts  ScenarioList.ts  SettingsScreen.ts  TitleScreen.ts
engine-ts/src/scripts/: voxel_converter.py  voxelize_asset.ts
engine-ts/src/systems/: SyncSystem.ts
engine-ts/src/utils/: ASCIIMapParser.ts  Voxelizer.ts
game-data/: units.json
game-data/assets/models/ui/: cat_voxel.gltf
game-data/scenarios/: zerg_rush.json
