[package]
name = "core-sim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = { version = "0.24", features = ["serde"] } # Double precision math
console_error_panic_hook = "0.1"
priority-queue = "1.3" # Essential for A*
ordered-float = "4.0" # For using floats in HashMaps/Sets