[package]
name = "core-sim"
version = "0.1.0"
edition = "2021"
description = "Deterministic RTS Core in Rust"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# Math
glam = { version = "0.24", features = ["serde"] } 

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6" 

[dev-dependencies]
wasm-bindgen-test = "0.3"